@@ -1,19 +1,9 @@
 from _objc import *
-import warnings
 
-__all__ = ['PyObjCStrBridgeWarning']
-
-class PyObjCStrBridgeWarning(DeprecationWarning):
-    pass
+__all__ = []
 
 BRIDGED_STRUCTURES = {}
 BRIDGED_TYPES = []
-
-def str_to_unicode(s):
-    if not getStrBridgeEnabled():
-        warnings.warn("use unicode(str, encoding) for NSString", PyObjCStrBridgeWarning, stacklevel=2)
-    return unicode(s)
-BRIDGED_TYPES.append((str, str_to_unicode))
 
 # XXX - these could let us remove code from OC_PythonObject
 #NSNumber = lookUpClass('NSNumber')
